Progress on Exercise 2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,4 +22,5 @@
     "python.testing.pytestArgs": [],
     "python.envFile": "${workspaceFolder}/.env",
     "python.analysis.typeCheckingMode": "basic",
+    "python.pythonPath": "C:\\Users\\William Jones\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
 }
